# qCheck

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: CRC32.hpp  qCheck.hpp
include/CRC/: CRC32.hpp
source/: main.cpp  qCheck.cpp
source/CRC/: CRC32-a64.cpp  CRC32-x64.cpp  CRC32.cpp
tests/: CRC32.cpp  main.cpp
workflows/: ci.yml
